# newsletter

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  add_defaults.py  cgi.py  create_newsletter.py  cron.py  cron.sh  email.py  email_utils.py  endpoints.py  form_utils.py  html_utils.py  index.html  init.sql  mailer.py  main.py  make.py  pyproject.toml  renderers.py  requirements.txt  server.py  type_hints.py
.github/workflows/: test.yaml
css/: style.css
server/: answer_template.html  index.html  newsletter.py  question.html  question_template.html  testwebserver.py
server/cgi-bin/: create_newsletter.py  example.py  init.sql  lib.py  newsletter.py
server/css/: style.css
server/templates/: answer.html  question.html  question_box.html
templates/: answer.html  email.html  header.html  image_question.html  image_response.html  navbar.html  newsletter.html  question.html  question_board.html  question_form.html  response.html  submitted_question.html  text_question.html  user_question.html
tests/: test_create_newsletter.py  test_cron.py  test_database.py  test_endpoints.py  test_helpers.py  test_html.py  test_mailer.py  test_renderers.py  test_server.py
tests/templates/: navbar_curr_issue_5.html  navbar_first_issue_5.html  navbar_prev_issue_5.html  replace.html  replaced.html
utils/: constants.py  database.py  email.py  form.py  helpers.py  html.py  logger.py  type_hints.py
