[project]
name = "newsletter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bleach>=6.1.0",
    "mysql-connector-python>=9.0.0",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "neovim>=0.3.1",
]
